# IYFEngine

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  Doxyfile  LICENSE.md  README.md  VERSION.hpp  meson.build  meson_cheat_sheet.txt  meson_options.txt
components/common/: meson.build
components/common/src/: check.cpp
components/common/src/configuration/: Configuration.cpp  Configuration.hpp  ConfigurationValueReadError.hpp
components/common/src/configuration/interfaces/: Configurable.cpp
components/common/src/io/: DefaultFileSystem.cpp  DefaultFileSystem.hpp  DefaultFileSystemFile.cpp  DefaultFileSystemFile.hpp  File.cpp  File.hpp  FileOpenMode.hpp  FileSystem.cpp  FileSystem.hpp  Path.cpp  Path.hpp
components/common/src/io/exceptions/: FileException.hpp  FileOpenException.hpp  InvalidFileOperation.hpp  (+2 more)
components/common/src/logging/: Logger.cpp
components/common/src/utilities/: Endianess.hpp  FileInDir.hpp  Flags.hpp  NonCopyable.hpp  ReadWholeFile.cpp  StringUtilities.cpp  StringUtilities.hpp  TypeHelpers.hpp
src/: CMakeLists.txt  meson.build
src/ai/: BehaviourTree.cpp  Blackboard.cpp
src/assets/: AssetConstants.cpp  AssetManager.cpp
src/assets/loaders/: MeshLoader.cpp  TextureLoader.cpp
src/assets/metadata/: AnimationMetadata.cpp  AudioMetadata.cpp  CustomMetadata.cpp  FontMetadata.cpp  MaterialInstanceMetadata.cpp  MaterialMetadata.cpp  MaterialTemplateMetadata.cpp  MeshMetadata.cpp  Metadata.cpp  MetadataBase.cpp  PipelineMetadata.cpp  ScriptMetadata.cpp  ShaderMetadata.cpp  StringMetadata.cpp  TextureMetadata.cpp  VideoMetadata.cpp  WorldMetadata.cpp
src/assets/typeManagers/: FontTypeManager.cpp  MaterialTypeManager.cpp  MeshTypeManager.cpp  ShaderTypeManager.cpp  TextureTypeManager.cpp  TypeManager.cpp
src/core/: ComponentType.cpp  Constants.cpp  DefaultWorld.cpp  Engine.cpp  EntitySystemManager.cpp  GameState.cpp  InputListener.cpp  InputState.cpp  Logger.cpp  Platform.cpp  ProductID.cpp  Project.cpp  TransformationComponent.cpp  World.cpp
src/core/configuration/: Configuration.cpp
src/core/filesystem/: File.cpp  FileSystem.cpp  FileSystemWatcher.cpp  VirtualFileSystem.cpp  VirtualFileSystemFile.cpp
src/core/filesystem/linux/: InotifyFileSystemWatcher.cpp
src/core/filesystem/physfs/: physfsrwops.c
src/core/interfaces/: ComponentContainer.cpp  Configurable.cpp  TextSerializable.cpp
src/core/serialization/: MemorySerializer.cpp  VirtualFileSystemSerializer.cpp
src/graphics/: Camera.cpp  CubemapSkybox.cpp  DebugRenderer.cpp  GraphicsAPI.cpp  GraphicsAPIConstants.cpp  GraphicsSystem.cpp  LightComponent.cpp  MaterialDatabase.cpp  MaterialDefinition.cpp  MaterialFamilyDefinition.cpp  MaterialInstanceDefinition.cpp  MaterialLogicGraph.cpp  MaterialPipelineDefinition.cpp  MeshComponent.cpp  MeshLoader.cpp  Renderer.cpp  RendererProperties.cpp  ShaderConstants.cpp  ShaderMacros.cpp  Skybox.cpp  VertexDataLayouts.cpp
src/graphics/clusteredRenderers/: ClusteredRenderer.cpp  ClusteredRendererProperties.cpp
src/graphics/culling/: BoundingVolumes.cpp  Frustum.cpp
src/graphics/gl/: OpenGLAPI.cpp
src/graphics/imgui/: ImGuiImplementation.cpp  imguiCustom.cpp
src/graphics/materials/: MaterialDatabase.cpp  MaterialFamilyDefinition.cpp  MaterialInstanceDefinition.cpp  MaterialLogicGraph.cpp
src/graphics/shaderGeneration/: ShaderGenerator.cpp  ShaderMacroCombiner.cpp  VulkanGLSLShaderGenerator.cpp
src/graphics/shading/: ShaderGenerator.cpp  VulkanGLSLShaderGenerator.cpp
src/graphics/vulkan/: VulkanAPI.cpp  VulkanDebug.cpp  VulkanDeviceMemoryManager.cpp  VulkanInitializationAndSwapchain.cpp  VulkanMemoryAllocatorImpl.cpp
src/localization/: LocalizationCSVParser.cpp  TextLocalization.cpp
src/physics/: BulletPhysicsDebugRenderer.cpp  Collider.cpp  PhysicsSystem.cpp  RigidBody.cpp
src/physics/bullet/: BulletPhysicsDebugRenderer.cpp  BulletPhysicsSystem.cpp
src/sound/: SoundAPI.cpp
src/threading/: Implementation.cpp
src/utilities/: BufferRangeSet.cpp  Compression.cpp  ImGuiUtils.cpp  Regexes.cpp  StringUtilities.cpp  stbImpl.cpp
testing/: BehaviourTreeTests.cpp  BehaviourTreeTests.hpp  CSVParserTests.cpp  CSVParserTests.hpp  ChunkedVectorTests.cpp  ChunkedVectorTests.hpp  ConfigurationTests.cpp  ConfigurationTests.hpp  FileMonitorTests.cpp  FileMonitorTests.hpp  MemorySerializerTests.cpp  MemorySerializerTests.hpp  MetadataSerializationTests.cpp  MetadataSerializationTests.hpp  PackingAttempts.cpp  TestBase.hpp  TestState.cpp  TestState.hpp  main.cpp  meson.build  productID.cpp
tools/IYFEditor/: meson.build
tools/IYFEditor/include/: AssetList.hpp  DragDropAssetPayload.hpp  EditorUI.hpp  MeshImporterState.h
tools/IYFEditor/include/assetImport/: Converter.hpp  ConverterManager.hpp  ConverterState.hpp  ImportedAssetData.hpp  MaterialTemplateConverter.hpp  MeshConverter.hpp  ShaderConverter.hpp  TextureConverter.hpp
tools/IYFEditor/include/states/: EditorState.hpp  EditorWelcomeState.hpp
tools/IYFEditor/include/tools/: AssetCreatorWindow.hpp  AssetUpdateManager.hpp  MaterialEditor.hpp  MaterialFamilyEditor.hpp  MaterialInstanceEditor.hpp  ShadingPipelineEditor.hpp
tools/IYFEditor/src/: CMakeLists.txt  EditorUI.cpp  MeshImporterState.cpp  main.cpp
tools/IYFEditor/src/assetImport/: Converter.cpp  ConverterManager.cpp  ConverterState.cpp  FontConverter.cpp  LocalizationStringConverter.cpp  MaterialTemplateConverter.cpp  MeshConverter.cpp  ShaderConverter.cpp  TextureConverter.cpp
tools/IYFEditor/src/states/: EditorState.cpp  EditorWelcomeState.cpp
tools/IYFEditor/src/tools/: AssetCreatorWindow.cpp  AssetUpdateManager.cpp  Compressonator_Test_Helpers.cpp  MaterialEditor.cpp  MaterialFamilyEditor.cpp  MaterialInstanceEditor.cpp  ShadingPipelineEditor.cpp
tools/Launcher/: main.cpp  meson.build
tools/Launcher/data/: add_menu.ui  iyflauncher.gresource.xml  launcher.glade  menu.ui  new_project_dialog.glade  open_project_dialog.glade
tools/Launcher/include/: LauncherApp.hpp  LauncherAppWindow.hpp  LauncherData.hpp  ProgressDialog.hpp
tools/Launcher/src/: LauncherApp.cpp  LauncherAppWindow.cpp  ProgressDialog.cpp
(+274 files in other folders)
