option('shaderc_include_dir', type : 'string', value : '', description : 'An include directory to use for shaderc in case it was not found automatically')
option('shaderc_lib_dir', type : 'string', value : '', description : 'A shaderc library dir that contains libshaderc_combined.a in case it was not found automatically')
option('iyf_build_tools', type : 'boolean', value : true, description : 'Should the tools (e.g., the editor) be built. If this is false, only the static libraries of the engine will be built')
option('compressonator_include_dir', type : 'string', value : '', description : 'Where to find the compressonator headers')
option('compressonator_lib_dir', type : 'string', value : '', description : 'Where to find the compressonator library')
option('physics_engine', type : 'combo', choices : ['bullet'], value : 'bullet')
option('iyf_thread_profiler_enabled', type : 'boolean', value : false, description : 'Should macros that enable thread and performance profiler functions be enabled? This should be off for non-dev builds because of a performance impact. The macros will also be enabled automatically when iyf_build_tools is true because the profiler ui cannot work without them.')
option('use_fast_linker', type : 'boolean', value : true, description : 'Use a fast linker (e.g., lld) instead of the default one on compilers that support it. May need to be installed first')
option('trace_compilation_times', type : 'boolean', value : false, description : 'Trace compilation times using -ftime-trace. Only supported on Clang >=9.0')
